# xlibs-original

./: .gitignore  Makefile.am  README.md  configure.ac
data-structures/: README.md
docs/: Doxyfile  bibliography.bib  index.md
mathematics/: README.md
mathematics/include/: Makefile.am  mathematics.h
mathematics/src/: Makefile.am  mathematics.c  modular_exponentiation.c
memory/: README.md
strings/: README.md
strings/docs/man/man3/: calculate_edit_distance.3  string_length.3
strings/include/: strings.h
strings/src/: Makefile.am  edit_distance.c  find_substring.c  string_length.c
