AC_PREREQ([2.69])
AC_INIT([xlibs], [0.1.0], [jflopezfernandez@gmail.com])
LT_INIT
AM_INIT_AUTOMAKE([foreign -Wall])

 # Configure Source and Header Files
AC_CONFIG_SRCDIR([mathematics/src/mathematics.c])
AC_CONFIG_HEADER([mathematics/include/config.h])

# Check for necessary programs.
AM_PROG_AR
AC_PROG_CC
AC_PROG_INSTALL

# Check for libraries.
#

# Check for header files.
#

# Check for library functions.
AC_CONFIG_FILES([
    Makefile
    mathematics/Makefile
    mathematics/include/Makefile
    mathematics/src/Makefile
])

# Output configuration-specific build files.
AC_OUTPUT
